[gd_scene load_steps=6 format=2]

[ext_resource path="res://Enemy/Enemy.gd" type="Script" id=1]

[sub_resource type="CapsuleShape" id=1]

[sub_resource type="CapsuleMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.0470588, 0.996078, 0.0156863, 1 )

[sub_resource type="CubeMesh" id=4]

[node name="Enemy" type="KinematicBody" groups=[
"Enemies",
]]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="CollisionShape"]
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="Direction" type="MeshInstance" parent="CollisionShape/MeshInstance"]
transform = Transform( 0.2, 0, 0, 0, 0.5, 0, 0, 0, 0.2, 0, -1.0783, -0.739933 )
mesh = SubResource( 4 )
material/0 = null

[node name="DetectionArea" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.28664 )

[node name="RayCast" type="RayCast" parent="DetectionArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.730396, 0 )
enabled = true
cast_to = Vector3( 0, 0, -10 )

[node name="CollisionPolygon" type="CollisionPolygon" parent="DetectionArea"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
polygon = PoolVector2Array( 0, 0, -10, -10, 10, -10 )

[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
